[package]
name = "libercoin_config"
version = "2.0.0-beta.2"
authors = ["libercoin Developers <mimblewimble@lists.launchpad.net>"]
description = "Configuration for libercoin, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/libercoin"
keywords = [ "crypto", "libercoin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.6"
serde = "1"
serde_derive = "1"
toml = "0.4"
dirs = "1.0.3"

libercoin_core = { path = "../core", version = "2.0.0-beta.2" }
libercoin_servers = { path = "../servers", version = "2.0.0-beta.2" }
libercoin_p2p = { path = "../p2p", version = "2.0.0-beta.2" }
libercoin_util = { path = "../util", version = "2.0.0-beta.2" }

[dev-dependencies]
pretty_assertions = "0.5.1"
