[package]
name = "libercoin_servers"
version = "1.1.1-beta.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/libercoin"
keywords = [ "crypto", "libercoin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
hyper = "0.12"
hyper-rustls = "0.14"
fs2 = "0.4"
futures = "0.1"
http = "0.1"
itertools = "0.7"
lmdb-zero = "0.4.4"
rand = "0.6"
serde = "1"
log = "0.4"
serde_derive = "1"
serde_json = "1"
chrono = "0.4.4"
tokio =  "0.1.11"

libercoin_api = { path = "../api", version = "1.1.1-beta.1" }
libercoin_chain = { path = "../chain", version = "1.1.1-beta.1" }
libercoin_core = { path = "../core", version = "1.1.1-beta.1" }
libercoin_keychain = { path = "../keychain", version = "1.1.1-beta.1" }
libercoin_p2p = { path = "../p2p", version = "1.1.1-beta.1" }
libercoin_pool = { path = "../pool", version = "1.1.1-beta.1" }
libercoin_store = { path = "../store", version = "1.1.1-beta.1" }
libercoin_util = { path = "../util", version = "1.1.1-beta.1" }
